Velcro test First SandBox/src/objects/Monthly_Report__c.object
<CustomObject>
    <description>Used by Sales Reps to report Monthly Highlights and Lowlights</description>
    <fields>
        <fullName>Account_1_Outlook__c</fullName>
        <label>Account 1 Outlook/Activity</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Account_1_Why_Up_Down__c</fullName>
        <label>Account 1: Why Up/Down</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account_2_Outlook_Activity__c</fullName>
        <label>Account 2 Outlook /Activity</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Account_2_Why_Up_Down__c</fullName>
        <label>Account 2: Why Up/Down</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account_3_Outlook_Activity__c</fullName>
        <label>Account 3 Outlook /Activity</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Account_3_Why_Up_Down__c</fullName>
        <label>Account 3: Why Up/Down</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account_4_Outlook_Activity__c</fullName>
        <label>Account 4 Outlook /Activity</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Competition_Market_Activitiy__c</fullName>
        <inlineHelpText>Briefly list out what is happening in your territory in regards to Market changes/news and notable news about competition</inlineHelpText>
        <label>Competition &amp; Market Activitiy</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Competition_Market_Activity__c</fullName>
        <label>Competition &amp; Market Activity</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Customer_Losses__c</fullName>
        <inlineHelpText>*Account Name
*Revenue
*Application
*Why we didn&apos;t win</inlineHelpText>
        <label>Customer Losses</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Customer_Wins__c</fullName>
        <inlineHelpText>*Account Name
*Revenue, Application
*Why we won</inlineHelpText>
        <label>Customer Wins</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Highlights_Not_Wins__c</fullName>
        <inlineHelpText>Highlights in your territory (Not Won Opportunities)</inlineHelpText>
        <label>Highlights (Not Wins)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Lowlights_Challenges__c</fullName>
        <inlineHelpText>Challenges or lowlights in your territory</inlineHelpText>
        <label>Lowlights/Challenges</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>MR_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MR Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <formula>Owner:User.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Months_Plans_Actions_Outlook__c</fullName>
        <inlineHelpText>Briefly list what goals you have for next month</inlineHelpText>
        <label>Next Months Plans/Actions/Outlook</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Opportunity_1_Needs_Next_Steps__c</fullName>
        <label>Opportunity 1 Needs / Next Steps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_2_Needs_Next_Steps__c</fullName>
        <label>Opportunity 2 Needs / Next Steps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_3_Needs_Next_Steps__c</fullName>
        <label>Opportunity 3 Needs / Next Steps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owner_Role__c</fullName>
        <formula>Owner:User.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Month__c</fullName>
        <label>Reporting Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Jan</fullName>
                </value>
                <value>
                    <fullName>Feb</fullName>
                </value>
                <value>
                    <fullName>Mar</fullName>
                </value>
                <value>
                    <fullName>Apr</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>Jun</fullName>
                </value>
                <value>
                    <fullName>Jul</fullName>
                </value>
                <value>
                    <fullName>Aug</fullName>
                </value>
                <value>
                    <fullName>Sep</fullName>
                </value>
                <value>
                    <fullName>Oct</fullName>
                </value>
                <value>
                    <fullName>Nov</fullName>
                </value>
                <value>
                    <fullName>Dec</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reporting_Year__c</fullName>
        <label>Reporting Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Submit</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Top_5_Account_Chart__c</fullName>
        <inlineHelpText>Copy and Paste a screen cap from the Dashboard above</inlineHelpText>
        <label>Top 5 Account Chart</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Top_5_Opportunity_Chart__c</fullName>
        <inlineHelpText>Copy and Paste Screen Cap of Opportunity Chart Above</inlineHelpText>
        <label>Top 5 Opportunity Chart</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Monthly Report</label>
    <listViews>
        <fullName>AllMR</fullName>
        <columns>OWNER.ALIAS</columns>
        <columns>NAME</columns>
        <columns>Reporting_Month__c</columns>
        <columns>Reporting_Year__c</columns>
        <columns>Next_Months_Plans_Actions_Outlook__c</columns>
        <columns>Highlights_Not_Wins__c</columns>
        <columns>Lowlights_Challenges__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Monthly Reports</label>
        <sharedTo>
            <role>North_America_Executive</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Brad_Cunningham_s_MR</fullName>
        <columns>OWNER.ALIAS</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Reporting_Month__c</columns>
        <columns>Reporting_Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Owner_Role__c</field>
            <operation>equals</operation>
            <value>National Account Key Account Manager,Inside Sales,Medical - Inside Sales</value>
        </filters>
        <label>Brad Cunningham&apos;s MR</label>
        <sharedTo>
            <role>National_Account_Sales_Manager</role>
            <role>North_America_Executive</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CMR</fullName>
        <columns>OWNER.ALIAS</columns>
        <columns>NAME</columns>
        <columns>Reporting_Month__c</columns>
        <columns>Reporting_Year__c</columns>
        <columns>Next_Months_Plans_Actions_Outlook__c</columns>
        <columns>Owner_Role__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Owner_Role__c</field>
            <operation>contains</operation>
            <value>Channel</value>
        </filters>
        <label>Channel Monthly Reports</label>
        <sharedTo>
            <role>North_America_Executive</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Dante_s_Team</fullName>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>NAME</columns>
        <columns>Reporting_Month__c</columns>
        <columns>Reporting_Year__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Next_Months_Plans_Actions_Outlook__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Owner_Role__c</field>
            <operation>contains</operation>
            <value>Consumer</value>
        </filters>
        <label>Dante&apos;s Team</label>
        <sharedTo>
            <role>North_America_Executive</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LATAM_North_Team</fullName>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>NAME</columns>
        <columns>Next_Months_Plans_Actions_Outlook__c</columns>
        <columns>Reporting_Month__c</columns>
        <columns>Reporting_Year__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Owner_Role__c</field>
            <operation>contains</operation>
            <value>Mex</value>
        </filters>
        <label>LATAM North Team</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Shawn_s_Team</fullName>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>NAME</columns>
        <columns>Reporting_Month__c</columns>
        <columns>Reporting_Year__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Owner_Role__c</field>
            <operation>contains</operation>
            <value>Industrial</value>
        </filters>
        <label>Shawn&apos;s Team</label>
        <sharedTo>
            <role>Industrial_Sales_Manager</role>
            <role>North_America_Executive</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Monthly Report</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monthly Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>